internal/testdata/basic/service-templates/test-basic-external-service/networkpolicy-basic1.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    lagoon.sh/branch: main
    lagoon.sh/version: v2.7.x
  labels:
    app.kubernetes.io/instance: service-network-policy
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: service-network-policy
    lagoon.sh/buildType: branch
    lagoon.sh/environment: main
    lagoon.sh/environmentType: production
    lagoon.sh/project: example-project
    lagoon.sh/service: basic1
    lagoon.sh/service-type: network-policy
    lagoon.sh/template: service-network-policy-0.1.0
  name: basic1
spec:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchExpressions:
        - key: lagoon.sh/project
          operator: In
          values:
          - my-project1
        - key: lagoon.sh/environment
          operator: In
          values:
          - main
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchExpressions:
        - key: lagoon.sh/project
          operator: In
          values:
          - my-project2
        - key: lagoon.sh/environmentType
          operator: In
          values:
          - production
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchExpressions:
        - key: lagoon.sh/project
          operator: In
          values:
          - my-project3
        - key: lagoon.sh/environment
          operator: NotIn
          values:
          - feature-branch
          - feature-environment-with-really-really-rea-cd7d
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchExpressions:
        - key: lagoon.sh/project
          operator: In
          values:
          - my-project4
        - key: lagoon.sh/buildType
          operator: NotIn
          values:
          - pullrequest
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchExpressions:
        - key: organization.lagoon.sh/name
          operator: In
          values:
          - example-org
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchExpressions:
        - key: organization.lagoon.sh/name
          operator: In
          values:
          - example-org1
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchExpressions:
        - key: organization.lagoon.sh/name
          operator: In
          values:
          - example-org2
        - key: lagoon.sh/environmentType
          operator: In
          values:
          - production
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchExpressions:
        - key: organization.lagoon.sh/name
          operator: In
          values:
          - example-org3
        - key: lagoon.sh/project
          operator: NotIn
          values:
          - projecta
          - projectb
  podSelector:
    matchLabels:
      lagoon.sh/service: basic1
