internal/testdata/basic/service-templates/test-basic-external-service/service-basic1.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    lagoon.sh/branch: main
    lagoon.sh/version: v2.7.x
  labels:
    app.kubernetes.io/instance: basic1
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: basic
    lagoon.sh/buildType: branch
    lagoon.sh/environment: main
    lagoon.sh/environmentType: production
    lagoon.sh/project: example-project
    lagoon.sh/service: basic1
    lagoon.sh/service-type: basic
    lagoon.sh/template: basic-0.1.0
  name: basic1
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: basic1
    app.kubernetes.io/name: basic
status:
  loadBalancer: {}
